# sdkwork-messaging

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/: README.md
apps/sdkwork-messaging-common/: README.md
crates/sdkwork-messaging-database-host/: Cargo.toml
crates/sdkwork-messaging-database-host/src/: lib.rs
crates/sdkwork-messaging-delivery-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-messaging-delivery-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-messaging-delivery-repository-sqlx/src/: bootstrap.rs  lib.rs
crates/sdkwork-messaging-delivery-repository-sqlx/tests/: messaging_storage_standard.rs
crates/sdkwork-messaging-delivery-service/: Cargo.toml  README.md
crates/sdkwork-messaging-delivery-service/specs/: README.md  component.spec.json
crates/sdkwork-messaging-delivery-service/src/: lib.rs
crates/sdkwork-messaging-delivery-service/tests/: messaging_core_standard.rs
crates/sdkwork-messaging-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-messaging-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-router-messaging-app-api/: Cargo.toml  README.md
crates/sdkwork-router-messaging-app-api/specs/: README.md  component.spec.json
crates/sdkwork-router-messaging-app-api/src/: lib.rs
crates/sdkwork-router-messaging-app-api/tests/: messaging_app_routes_standard.rs
crates/sdkwork-router-messaging-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-messaging-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-router-messaging-backend-api/src/: lib.rs
crates/sdkwork-router-messaging-backend-api/tests/: messaging_backend_routes_standard.rs
crates/sdkwork-routes-messaging-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-messaging-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-messaging-app-api/src/: lib.rs
crates/sdkwork-routes-messaging-app-api/tests/: messaging_app_routes_standard.rs
crates/sdkwork-routes-messaging-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-messaging-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-messaging-backend-api/src/: lib.rs
crates/sdkwork-routes-messaging-backend-api/tests/: messaging_backend_routes_standard.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_messaging_baseline.sql  0001_messaging_legacy_baseline.sql
database/ddl/baseline/sqlite/: 0001_messaging_baseline.sql
database/seeds/common/: 001_bootstrap.sql
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
scripts/: messaging-governance.test.mjs
sdks/: README.md  materialize-messaging-v3-openapi-boundaries.mjs
sdks/_route-manifests/app-api/: sdkwork-router-messaging-app-api.route-manifest.json  sdkwork-routes-messaging-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-messaging-backend-api.route-manifest.json  sdkwork-routes-messaging-backend-api.route-manifest.json
sdks/sdkwork-messaging-app-sdk/: .sdkwork-assembly.json  README.md
sdks/sdkwork-messaging-app-sdk/openapi/: sdkwork-messaging-app-api.openapi.yaml  sdkwork-messaging-app-api.sdkgen.yaml
sdks/sdkwork-messaging-app-sdk/specs/: README.md  component.spec.json
sdks/sdkwork-messaging-backend-sdk/: .sdkwork-assembly.json  README.md
sdks/sdkwork-messaging-backend-sdk/openapi/: sdkwork-messaging-backend-api.openapi.yaml  sdkwork-messaging-backend-api.sdkgen.yaml
sdks/sdkwork-messaging-backend-sdk/specs/: README.md  component.spec.json
specs/: README.md  component.spec.json
tests/: messaging-migration-contract.test.mjs
tools/: materialize_messaging_database_contract.mjs
