[package]
name = "sdkwork-messaging-delivery-repository-sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SQLx storage contracts for SDKWork messaging."

[lib]
name = "sdkwork_messaging_delivery_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { path = "../../../sdkwork-pool/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-pool/crates/sdkwork-database-sqlx" }
