[package]
name = "sdkwork-messaging-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-messaging application HTTP plane."

[lib]
name = "sdkwork_messaging_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_messaging_app_api = { package = "sdkwork-routes-messaging-app-api", path = "../sdkwork-routes-messaging-app-api" }
sdkwork_routes_messaging_backend_api = { package = "sdkwork-routes-messaging-backend-api", path = "../sdkwork-routes-messaging-backend-api" }
